Suddivisione di maincontroller in più controller per miglior gestione. Suddiviosione del main.fxml in più sotto .fxml