@@ -6,27 +6,18 @@
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
     application
     id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
-
-
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
 dependencies {
-    // Use JUnit test framework.
     testImplementation(libs.junit)
-
-    // This dependency is used by the application.
     implementation(libs.guava)
-
     implementation("com.google.code.gson:gson:2.13.2")
-
     implementation("org.openjfx:javafx-controls:25.0.3")
     implementation("org.openjfx:javafx-fxml:25.0.3")
     implementation("org.openjfx:javafx-web:25.0.3")
@@ -34,10 +25,9 @@ dependencies {
 
 javafx {
     version = "25.0.3"
-    modules = listOf("javafx.controls","javafx.fxml","javafx.swing")
+    modules = listOf("javafx.controls", "javafx.fxml", "javafx.swing")
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(25)
@@ -45,6 +35,14 @@ java {
 }
 
 application {
-    // Define the main class for the application.
     mainClass = "it.unicam.cs.mpgc.rpg125571.App"
+    applicationDefaultJvmArgs = listOf(
+        "--enable-native-access=javafx.graphics,javafx.media,javafx.web"
+    )
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs(
+        "--enable-native-access=javafx.graphics,javafx.media,javafx.web"
+    )
 }
